--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^5.6.1",
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "typings-tester": "^0.3.2"
   }
 }
